care/force-app/main/default/objects/Event_Members__c/Event_Members__c.object-meta.xml
<CustomObject>
    <description>Junction object to connect Events__c and Accounts (Provider/Seeker)</description>
    <label>Event Member</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Event Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>