care/force-app/main/default/objects/Event_Members__c/fields/Attendance_Reason__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Reason__c</fullName>
    <label>Attendance Reason</label>
    <type>TextArea</type>
</CustomField>