care/force-app/main/default/objects/Event_Members__c/fields/Onsite_Group__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Group__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Onsite Group</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event Members</relationshipLabel>
    <relationshipName>Event_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>