care/force-app/main/default/objects/Event_Members__c/fields/Seeker_Registered__c.field-meta.xml
<CustomField>
    <fullName>Seeker_Registered__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Seeker attending event/onsite group</description>
    <label>Seeker Registered</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Event Members</relationshipLabel>
    <relationshipName>Event_Members</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>