care/force-app/main/default/objects/Event_Members__c/fields/Seeker_s_Job_Title_Level__c.field-meta.xml
<CustomField>
    <fullName>Seeker_s_Job_Title_Level__c</fullName>
    <label>Seeker&apos;s Job Title - Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>